--- a/v6/slot.html
+++ b/v6/slot.html
@@ -9,6 +9,7 @@
 <div id="app">
     <hello>
         <input type="text">
+        <input type="button">
         <a href="https://www.baidu.com" slot="SS">baidu</a>
     </hello>
 </div>
@@ -18,6 +19,7 @@
         <slot name="SS"></slot>
         <h3>我是内容</h3>
         <!--用来显示自定义组件标签中添加的内容-->
+        <slot></slot>
         <slot></slot>
     </div>
 </template>
