--- a/v1/03.html
+++ b/v1/03.html
@@ -8,7 +8,7 @@
 <body>
 <div id="itany">
     <input type="button" v-model="b_content" v-on:click="turn()">
-    <div style="width: 300px;height: 200px;background-color: red" v-show="flag"></div>
+    <div style="width: 300px;height: 200px;background-color: red" v- ="flag"></div>
 </div>
 <script>
     new Vue({
