--- a/v2/全局过滤器.html
+++ b/v2/全局过滤器.html
@@ -10,7 +10,7 @@
     <span>{{msg | changeNumber}}</span><br>
     <span>{{msg2 | fix(2)}}</span><br>
     <span>aa:{{currentTime | haha}}</span><br>
-    <span>{{msg2 | fix(2)}}</span><br>
+    <span>{{msg2 | fix1(2)}}</span><br>
 </div>
 <script>
     /**
