--- a/v4/Vue实例的属性.html
+++ b/v4/Vue实例的属性.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="itany">
-    <h3 ref="hello">ref</h3>
+    <div ref="hello">ref</div>
     {{msg}}{{age}}
 </div>
 <script>
@@ -42,6 +42,7 @@
     console.log(vm.$options.computed.num.get())
     //获取元素中有属性为ref的元素
     vm.$refs.hello.style.color = 'green'
+    vm.$refs.hello.style.fontSize = "small"
 </script>
 </body>
 </html>
