--- a/v4/vue实例的方法.html
+++ b/v4/vue实例的方法.html
@@ -29,7 +29,7 @@
             bok:false,
             user: {
                 name: "zhangsan",
-                age: '18'
+                // age: '18'
             }
         },
         methods: {
@@ -40,6 +40,7 @@
                 } else {
 
                     Vue.set(this.user, 'age', 18)
+                    // this.user.age=18
                 }
 
                 this.$set(this.user, 'county', 'zhongguo')
